--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -9,13 +9,13 @@
 
 @media (prefers-color-scheme: dark) {
   :root {
-    --background: #0a0a0a;
-    --foreground: #ededed;
+    --background: #2e2938;
+    --foreground: #b4acf9;
   }
 }
 
 body {
-  color: var(--foreground);
+  color: #ffffff;
   background: var(--background);
   font-family: Arial, Helvetica, sans-serif;
 }
