--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,40 @@
   }
 }
 
+.container {
+  width: 100%;
+
+  padding-right: 1rem;
+  padding-left: 1rem;
+
+  margin-right: auto;
+  margin-left: auto;
+}
+
+@media (min-width: 1536px) {
+  .container {
+    max-width: 1536px;
+  }
+}
+
+@media (min-width: 640px) {
+  .container {
+    max-width: 640px;
+  }
+}
+
+@media (min-width: 1024px) {
+  .container {
+    max-width: 1024px;
+  }
+}
+
+@media (min-width: 1280px) {
+  .container {
+    max-width: 1280px;
+  }
+}
+
 body {
   color: #ffffff;
   background: var(--background);
